# eciadsl

./: .project
CVSROOT/: loginfo
doc/: Makefile  README-eciconf-en.txt  README-eciconf-fr.txt  TODO  docbin-en.txt  docbin-es.txt  docbin-fr.txt  docbin-pt.txt  eciadsl-on-openbsd.txt  eciadsl_install_de.texi  eciadsl_install_en.texi  eciadsl_install_es.texi  eciadsl_install_fr.texi  eciadsl_install_it.texi  eciadsl_install_tr.texi  eciadsl_kernelmode.tex  howto-en.tex  howto.tex  howto.txt  kernelmode-design.tex  technical-reference.tex  usermode-design.tex
eciadsl-usermode-bsd/: INSTALL.pt  Makefile  Makefile.config  Makefile.dep  README.fr  TROUBLESHOOTING.es  check-hdlc-bug.c  config.h  config.status  configure  configure.ac  eci-load2.c  eci_vendor_device.pl  eciconf.sh  gs7070.c  gs7070.h  kmadsl  makeconfig  ppp.conf  pppoeci.c  semaphore.h
eciadsl-usermode-bsd/autom4te.cache/: output.1  output.2  requests  traces.1
eciadsl-usermode-bsd/debian/: changelog  control
eciadsl-usermode-bsd/rfc/: rfc1577.txt
eciadsl-usermodem-bsd/: BUGS  INSTALL  INSTALL.es  INSTALL.fr  Makefile.in  bsd.txt  configure  eci-load1  eci-load1.c  eci-load2  eci_uc.pl  modems.db  pppoeci  probe_synch.sh  semaphore.c  util.c
eciadsl-usermodem-bsd/autom4te.cache/: traces.0  traces.2
eciadsl-usermodem-bsd/debian/: rules
ecicommon/: .cvsignore  dsp.h  eoc.c  eoc.h  interrupt.c  interrupt.h  main.c
firmware/: INSTALL  README
firmware/src/: Makefile  firm_test.c
firmware/tools/: Makefile  bin2hex.c  ezusb-mem.c
kernelmode/: .cvsignore  Comments  INSTALL  Makefile  Makefile-2,4  Makefile-2.6  README  atmtotap.c  converter.c  eci.c  firm.hex  lcp.h  patchlevel.h  pathnames.h  pppd.h  pppoatm.c  startmodem  test  usb_packets.h  usb_packets_dmt.h
libpusb-bsd/sample/: Makefile  Makefile.in  config.status  configure  configure.ac  pusb-view  pusb-view.c
libpusb-bsd/src/: Makefile  Makefile.dep  Makefile.in  config.status  configure  configure.ac  pusb-bsd.c  pusb-common.c  pusb-linux.c  pusb.c  pusb.h  pusb.m4
synch_bin/: ChangeLog  Makefile  README  README.fr  README.it  README.pt  gs7470_synch01.bin.md5  gs7470_synch01a.bin.md5  gs7470_synch01b.bin.md5  gs7470_synch02.bin.md5  gs7470_synch02a.bin.md5  gs7470_synch02b.bin.md5  gs7470_synch03.bin.md5  gs7470_synch04.bin.md5  gs7470_synch05.bin.md5  gs7470_synch06.bin.md5  gs7470_synch07.bin.md5  gs7470_synch08.bin.md5  gs7470_synch09.bin.md5  gs7470_synch10.bin.md5  gs7470_synch11.bin.md5  gs7470_synch12.bin.md5  gs7470_synch13.bin.md5  gs7470_synch14.bin.md5  gs7470_synch15.bin.md5  gs7470_synch16.bin.md5  gs7470_synch17.bin.md5  gs7470_synch18.bin.md5  md5sum.txt  synch00.bin.md5  synch01.bin.md5  synch02.bin.md5  synch03.bin.md5  synch04.bin.md5  synch05.bin.md5  synch06.bin.md5  synch07.bin.md5  synch08.bin.md5  synch09.bin.md5  synch10.bin.md5  (+45 more)
usermode/: .cvsignore  AUTHORS  ChangeLog  HOWTO-CONNECT-AT-BOOT.txt  ID  INSTALL  INSTALL.es  INSTALL.fr  INSTALL.it  INSTALL.pt  Makefile  Makefile.am  Makefile.config.sk  Makefile.in  NEWS  README  README.FR  README.es  README.fr  README.it  README.pt  README_GS7470.txt  TODO  TROUBLESHOOTING  TROUBLESHOOTING.es  TROUBLESHOOTING.fr  TROUBLESHOOTING.it  TROUBLESHOOTING.pt  VERSION  adsl  bootstrap  check-hdlc-bug.c  check-hdlc.c  configure  configure.ac  dirs  eci-doctor.sh  eci-eeprom.c  eci-load1.c  eci-load2.c  (+66 more)
usermode/DEBIAN/: README.Debian  README.debian  changelog  control  eciadsl-ursermode.0.5-doc.postinst.debhelper  eciadsl-ursermode.0.5-doc.prerm.debhelper  files
usermode/debian/: changelog  control  copyright  docs  eciadsl-ursermode.0.5.postinst.debhelper  eciadsl-ursermode.0.5.prerm.debhelper  eciadsl-usermode.0.5-doc.postinst.debhelper  eciadsl-usermode.0.5-doc.prerm.debhelper  eciadsl-usermode.0.5.postinst.debhelper  eciadsl-usermode.0.5.prerm.debhelper  files  rules
usermode/eci-common/: Makefile  Makefile.am  eoc.c  eoc.h  interrupt.c  interrupt.h
usermode/init.d/: rc.adsl-SuSE7  rc.adsl-SuSE8
usermode/linux/: mod_devicetable.h
usermode/rfc/: rfc1577.txt  rfc1755.txt
